--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,11 +1,10 @@
 * {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-  
-
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   background-color: #333; /* Dark background for the overall layout */
   color: #ddd; /* Light text for contrast */
   line-height: 1.6;
@@ -15,7 +14,7 @@ body {
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
-  background-color: #222; 
+  background-color: #222;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
   text-align: center;
@@ -23,7 +22,7 @@ body {
 
 h1 {
   text-align: center;
-  color: #5D93E1; 
+  color: #5d93e1;
   margin-bottom: 20px;
   font-size: larger;
   font-weight: bold;
@@ -48,6 +47,14 @@ p {
   font-weight: bold;
 }
 
+#truther.correct {
+  color: #3c763d; /* Green color for correct answers */
+}
+
+#truther.wrong {
+  color: #a94442; /* Red color for wrong answers */
+}
+
 .btn-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -56,7 +63,7 @@ p {
 }
 
 .btn {
-  background-color: #5D93E1;
+  background-color: #5d93e1;
   color: #fff;
   border: 1px solid #444;
   border-radius: 5px;
@@ -85,7 +92,7 @@ p {
 
 #final-score {
   font-size: 1.4em;
-  color: #5D93E1;
+  color: #5d93e1;
 }
 
 #score-form {
@@ -118,4 +125,27 @@ p {
 
 #answer-buttons button {
   margin-bottom: 10px;
+}
+
+/* Remove the background-color from #timer-flash */
+#timer-flash {
+  animation: flashRed .5s;
+}
+
+/* Keyframes for just the text color flash */
+@keyframes flashRed {
+  0%{
+    color: #a94442;
+  }
+  100% {
+    color: #ddd; /* Original text color */
+  }
+  50% {
+    color: #a94442; /* Flash red color */
+  }
+}
+
+
+.flash-wrong {
+  animation: flashRed .5s;
 }
